--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -130,9 +130,9 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064023.md#1">古埃及《托特预言》：创世主末后救世</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063481.md#1">日本礼法之形成与社会功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065901.md#1">【环球直击】中国全民抓间谍《反间谍条例》上路</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065900.md#1">【全球新闻】宝马“新世代”概念车全球首发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065849.md#1">【全球新闻】强台风苏拉珠海登陆 海葵扑向台湾</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066016.md#1">【新闻五人行】习步步惊心 亡党十大败相齐了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065310.md#1">【中国禁闻】新版地图惹众怒 中共拉拢邻国企图落空</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065150.md#1">李克强游敦煌莫高窟视频热传 引热议</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064949.md#1">涿州洪水中驻军部队坦克飞机被毁 无人担责</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064914.md#1">捷克国家银行出清所有人民币资产</a></li>
@@ -140,12 +140,12 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064934.md#1">任威尼斯影展评审 舒淇惊艳亮相开幕式红毯</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064864.md#1">宋祖儿遭实名举报逃税？名下多家公司已注销</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065521.md#1">逃税传闻发酵 宋祖儿遭5大卫视官微删除内容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064623.md#1">胡宇威与陈庭妮7月已在美国登记结婚</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065575.md#1">“香港才子”蔡澜近况曝光 坐轮椅现身大马</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063325.md#1">不可错过的热带水果——奇异、营养又美味的菠萝蜜</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065173.md#1">什么是“弃程”？ 为何这招能省机票费用？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064562.md#1">花椰菜上有黑色斑点 吃起来安全吗？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065711.md#1">加州空军基地周边农地 为何被秘密收购？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059859.md#1">失眠易致失智肥胖 中医5方法改善 独创颈椎疗法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056270.md#1">防便秘这样做都错了！医师破解5迷思 加1物就通便</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/24/n14060646.htm">【更新】乔州选举案 川普到案后获保释</a></p><hr>
