--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -114,14 +114,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053956.md#1">【更新】乔州选举案 川普等被指控41项罪名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066307.md#1">两位华人非法走私海参 在美国法院认罪</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066171.md#1">实施涉中国人税务欺诈 乔治亚理工教授认罪</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065524.md#1">中企员工效忠中共视频曝光 在美设厂面临麻烦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066155.md#1">民调：2024年美国大选更像川普与拜登重赛</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
