--- a/gb/23/2/6/n13923876.md
+++ b/gb/23/2/6/n13923876.md
@@ -7,9 +7,9 @@
 </h6>
 <hr>
 	<p>【大纪元2023年02月06日讯】（大纪元记者李言综合报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">地震</a>学家说，周一（2月6日）袭击土耳其和叙利亚的7.8级地震可能是十年来最致命的地震之一。安纳托利亚（Anatolian）板块和阿拉伯板块之间出现了一条超过100公里（62英里）长的断层破裂（rupture）。</p>
-<p>周一（2月6日）早些时候，一场7.8级的大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">地震</a>席卷土耳其南部，土耳其和叙利亚死亡人数已上升到至少2,724人，受伤总人数攀升至13,580人。地震发生后，土耳其至少有11,119人受伤，叙利亚有2,461人受伤。</p>
-<p>土耳其副总统福阿特?奥克塔伊（Fuat Oktay）表示，土耳其总死亡人数已攀升至1,651人。</p>
-<p>叙利亚的总死亡人数上升至1,073人。阿拉伯叙利亚通讯社（Syrian Arab News Agency，SANA）报导说，政府控制区有593人死亡，被官方称为叙利亚民防组织的“白头盔”（White Helmets）报告说，反对派控制区有480人死亡。</p>
+<p>周一（2月6日）早些时候，一场7.8级的大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87.md#1">地震</a>席卷土耳其南部，土耳其和叙利亚死亡人数已上升到5,034人，受伤总人数攀升至21,103人。地震发生后，土耳其至少有13,293人受伤，叙利亚有3,649人受伤。</p>
+<p>根据土耳其灾害与应急管理局（AFAD）的数据，土耳其总死亡人数已攀升至3,432人。</p>
+<p>叙利亚总死亡人数上升至1,602人。这是最新数字。</p>
 <figure id="attachment_13924124" aria-describedby="caption-attachment-13924124" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13924124-GettyImages-1246845580.jpg"><img class="size-medium_vertical wp-image-13924124" src="https://i.epochtimes.com/assets/uploads/2023/02/id13924124-GettyImages-1246845580-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13924124" class="wp-caption-text">2023年2月6日，阿达纳（Adana）发生7.8级地震后，土耳其救援人员在倒塌的建筑物废墟中寻找幸存者，现场一名妇女情绪激动。当天早些时候发生的7.8级地震已造成该国和叙利亚数千人死亡。(Can Erok/AFP via Getty Images)</figcaption></figure>
 <p>地震发生在当地时间周一凌晨4点17分，包括土耳其首都安卡拉在内的更广泛地区都有震感。叙利亚、以色列和黎巴嫩等邻国也有震感。</p>
 <p>此次震中位于土耳其努尔达吉市（Nurdagi）以东约26公里处，在东安纳托利亚断层（East Anatolian Fault）约18公里的深处。地震向东北方向辐射，给土耳其中部和叙利亚带来破坏性影响。</p>
@@ -32,7 +32,7 @@
 <p>根据美国地质调查局的数据，自1970年以来，该地区只有三次里氏震级（Richter Scale）超过6.0的地震。但在1822年，该地区发生了7.0级地震，估计有2万人死亡。</p>
 <p>这次地震是由东安纳托利亚断层引起的。在地图上，可以看到该断层从北安纳托利亚断层的一个交界处延伸出来。</p>
 <p>东安纳托利亚断层是一个走滑断层（strike-slip fault，平移断层、横移断层）。这意味着当坚硬的岩石板块在垂直断层线上相互推挤时，压力会不断增加，直到一块岩石最终水平滑动，释放出可能引发地震的巨大应变。</p>
-<p>“阿拉伯构造板块正在向北移动，它们正在与北部的欧亚板块发生碰撞。这实际上具有将土耳其挤出侧面的效果。”澳大利亚科廷大学（Curtin University）地球与行星生命科学学院（School of Earth and Planetary Life Sciences）板块构造和构造地质学专家与兼职教授克里斯?埃尔德斯（Newsweek）告诉《新闻周刊》，“两个大板块相互靠近。中间的（土耳其）被横向挤压，导致地震的是土耳其的横向运动。”</p>
+<p>“阿拉伯构造板块正在向北移动，它们正在与北部的欧亚板块发生碰撞。这实际上具有将土耳其挤出侧面的效果。”澳大利亚科廷大学（Curtin University）地球与行星生命科学学院（School of Earth and Planetary Life Sciences）板块构造和构造地质学专家与兼职教授克里斯?埃尔德斯（Chris Elders）告诉《新闻周刊》（Newsweek），“两个大板块相互靠近。中间的（土耳其）被横向挤压，导致地震的是土耳其的横向运动。”</p>
 <figure id="attachment_13924133" aria-describedby="caption-attachment-13924133" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13924133-GettyImages-1246847110.jpg"><img class="size-medium_vertical wp-image-13924133" src="https://i.epochtimes.com/assets/uploads/2023/02/id13924133-GettyImages-1246847110-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13924133" class="wp-caption-text">2023年2月6日，阿达纳（Adana）发生7.8级地震后，土耳其救援人员在倒塌的建筑物废墟中寻找幸存者。当天早些时候发生的7.8级地震已造成该国和叙利亚数千人死亡。(Louai Beshara/AFP via Getty Images)</figcaption></figure>
 <p>加利福尼亚州的圣安德烈亚斯断层（San Andreas Fault）可能是世界上最著名的走滑断层。科学家警告说，一场灾难性的地震早就该发生了。</p>
 <p>路透社报导，土耳其-叙利亚地震的最初破裂是在一个相对较浅的深度启动的。</p>
@@ -49,46 +49,39 @@
 <p>“我们希望，我们将尽快共同克服这场灾难。”土耳其总统雷杰普?塔伊普?埃尔多安（Recep Tayyip Erdo?an）补充说。</p>
 <p>在1822年的致命事件之后，余震一直持续到第二年。</p>
 <p>责任编辑：林妍#</p>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 221px; width: 882.305px; height: 66px;"></div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 1px; top: 297px; opacity: 1;"></div>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924039.md#1">美国农民计划2023年大量种植玉米</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924062.md#1">分析：气球事件疑云重重 影射中共内斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923902.md#1">个人电脑销量暴跌 戴尔拟裁员6650人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923526.md#1">7.8级强震重创土耳其叙利亚 逾3000死</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105223.md#1">G7呼吁立即废除对日本海鲜禁令 施压中共</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105145.md#1">遭土耳其总统指为战犯 以色列召回外交官</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105113.md#1">以色列总理宣布战争进入第二阶段</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105076.md#1">分析：李克强离世 或将为中共政局再添变数</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/3/n10021983.md#1" target="_blank">杨宁：官司风波再起 红色舞剧洗脑没商量</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920654.md#1">音乐才子曾患白肺命危 默念九个字起死回生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917669.md#1">正月冬雷异象 多方示警亡政之兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917512.md#1">生命元神不灭 勿生生沉沦苦海里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922072.md#1">【未解之谜】新旧交替 地球面临大更新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922520.md#1">【十字路口】流浪气球令美中关系进入新冰点  ?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922661.md#1">【舞蹈三剑客】7个旅行必备！神韵舞蹈演员巡演必带用品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922698.md#1">【菁英论坛】胡鑫宇案背后的“器官特供基地”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922242.md#1">组图：如糯米团般圆滚滚的小鸟 风靡日本</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922665.md#1">【快讯】美军战斗机击落中共间谍气球</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922701.md#1">美击落中共间谍气球 美防长透露决策过程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922643.md#1">周润发登时尚杂志封面 重现《英雄本色》造型</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922098.md#1">金马影后陆小芬重返大银幕 曝40年前珍贵画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922703.md#1">胡歌宣布当爸后首现身 被翻曾预告过年送惊喜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922038.md#1">郭书瑶曾考虑转行 上实境秀想学一技之长</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921928.md#1">与梁朝伟合体飙演技 郭富城一天换三个造型</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922993.md#1">英男用这招订航班商务舱机位 比经济舱便宜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922185.md#1">5.99%房贷固定利率 对疲软的房市意味着什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922810.md#1">持续慢性胸痛？根源可能不是因为心脏问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921923.md#1">胡萝卜一定要带皮吃？5个烹饪技巧更健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898617.md#1">被称为“大药箱” 这一植物抗流感功效强大</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104560.md#1">【菁英论坛】习视察央行 人民币面临跳水</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103855.md#1">李克强在上海猝死  分析：疑点重重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103857.md#1">李克强死亡8小时后发丧 有何黑幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103869.md#1">李克强猝死时刻与毛一致 分析：不排除更大地震</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103752.md#1">进驻大陆平台引尴尬 香港视后唐诗咏被叫错名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103712.md#1">梁朝伟抵东京影展大师班 忆被王家卫调教演技</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103421.md#1">为什么会发生夜间盗汗？ 如何改善？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/6/n13923876.htm">余震如“末日审判” 解析土耳其叙利亚大地震</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923876.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
