--- a/gb/23/1/12/n13905474.md
+++ b/gb/23/1/12/n13905474.md
@@ -16,45 +16,36 @@
 <p>郭书瑶也分享2023年新希望，她为所有的人祈福，祈求身体健康，并且表示：“疫情这几年没有什么比身体健康，心情开心更重要了～愿2023每个人都能过得更自在！”</p>
 <p>责任编辑：辛幼安</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/16/n13650751.md#1">郭书瑶接掌《旅跑》节目 单身2年自招择偶肤浅</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/12/n13709720.md#1">郭书瑶连任爱心大使 童心未泯带闺蜜儿出游</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/17/n13739140.md#1">郭书瑶疫情下随遇而安 不忘等待好剧本</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/21/n13763908.md#1">代言街舞大赛 郭书瑶开口向娄峻硕邀约合作</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045340.md#1" target="_blank">《苦菜花》人物原型的真实人生（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/11/11/n11646873.md#1" target="_blank">中共暴政录：最奇葩的战争——战胜国送出国土</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/11/27/n8533521.md#1" target="_blank">勤修炼 英文老师丢了药罐子</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897321.md#1">【百年真相】“子承父业” 汉奸江泽民卖国实录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897476.md#1">一代娥眉惹风流 薛涛枇杷门巷后的人生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900965.md#1">充满神话与力量：安东尼奥?卡诺瓦的雕塑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905330.md#1">【晚间新闻】广州男开宝马车撞人致18死伤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904711.md#1">【未解之谜】2000年不腐 记录末日之战的古卷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/3/n13878046.md#1">【思想领袖】正当程序和公民自由正被剥夺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903383.md#1">赵立坚被调职是遭边缘化？专家分析缘由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900221.md#1">辉瑞Paxlovid未纳入中国医保 谈判内幕曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903231.md#1">傅政华出镜有蹊跷 习放狠话 孟建柱还有事？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903390.md#1">与林宥嘉结婚6周年 丁文琪铁婚纪念文引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904067.md#1">与修杰楷结婚8年 贾静雯形容婚姻是修炼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904014.md#1">65岁中国导演何平病亡 曾出演《建党伟业》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903326.md#1">杨紫琼获美国评协奖影后 45年来首位亚洲女星</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904104.md#1">陈奕迅拍《盲婚哑嫁》MV 歌词充满天命感</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894433.md#1">8种好零食 每天吃一把死亡风险降20%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903175.md#1">不止消炎助消化 每天喝芦荟汁的9个理由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903681.md#1">调查：总是感到内心安宁 世界排名前10个国家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903984.md#1">美研究员3D打印眼部组织 助了解黄斑变性成因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900962.md#1">设闹钟有秘诀 这样做包你不再被响铃惊醒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104560.md#1">【菁英论坛】习视察央行 人民币面临跳水</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103855.md#1">李克强在上海猝死  分析：疑点重重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103857.md#1">李克强死亡8小时后发丧 有何黑幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103869.md#1">李克强猝死时刻与毛一致 分析：不排除更大地震</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103752.md#1">进驻大陆平台引尴尬 香港视后唐诗咏被叫错名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103712.md#1">梁朝伟抵东京影展大师班 忆被王家卫调教演技</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103421.md#1">为什么会发生夜间盗汗？ 如何改善？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/12/n13905474.htm">筹划2年发新歌 郭书瑶期许完成二三首作品</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905474.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
